# brownsea-visitor-access-equity-model

./: .env.example  .gitignore  Added License  Dockerfile  Dockerfile.app  Makefile  README.md  Socioeconomic_Equity_Mapping_Targeting_Brownsea_Island_Outreach_Through_Deprivation_Analysis.ipynb  cli.py  pipeline.py  pyproject.toml  run_postcode_app.py
app/: gunicorn_app.py  server.py
docs/: README_STAFF_APP.md  downloads.html  help.html  index.html  release_manifest.json  run_manifest.json  stage_run_manifest.json
notebooks/: 00_run_pipeline_colab.ipynb  01_view_saved_outputs.ipynb  02_launch_app_colab.ipynb
requirements/: app.txt  colab.txt  prod.txt
scripts/: doctor.py  export_static_staff_app.py  freeze_release.py  launch_colab_app.py  qa_release.py  refresh_app_ui.py  refresh_release_postcode_lookup.py  smoke_app.py
src/: __init__.py  analysis_engine.py  app_smoke.py  business_scoring.py  colab_app.py  config.py  constants.py  data_pipeline.py  help_page.py  model_training.py  notebook_viewer.py  nt_sites.py  postcode_lookup.py  project_doctor.py  release_freeze.py  release_manager.py  release_qa.py  reporting.py  route_cache.py  routing_service.py  stage_resume.py  utils.py  validation.py  visualization.py  web_ui.py
tests/: test_app_display_formatting.py  test_app_release_paths.py  test_app_smoke.py  test_cli_formatting.py  test_config.py  test_feature_contract.py  test_logging_resilience.py  test_notebook_viewer.py  test_nt_sites.py  test_postcode_lookup_artifacts.py  test_project_doctor.py  test_release_freeze.py  test_release_manager.py  (+6 more)
(+84 files in other folders)
